--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/app_startup_info"
+        android:textSize="@dimen/app_info_text_size" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_sign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/app_info_margin"
+        android:contentDescription="@string/btn_sign_in_via_email"
+        android:drawablePadding="@dimen/btn_sign_drawable_padding"
+        android:drawableStart="@drawable/ic_email_black_48dp"
+        android:paddingEnd="@dimen/btn_sign_left_right_padding"
+        android:paddingStart="@dimen/btn_sign_left_right_padding"
+        android:text="@string/btn_sign_in_via_email"
+        android:textSize="@dimen/btn_sign_text_size" />
+
+</android.support.v7.widget.LinearLayoutCompat>
