--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="btn_min_height">60dp</dimen>
     <dimen name="btn_text_size">20sp</dimen>
 
+    <!-- Search Activity -->
+    <dimen name="edit_text_search_margin">40dp</dimen>
+
 </resources>
