--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,11 @@
     <!-- Search Activity -->
     <dimen name="edit_text_search_margin">40dp</dimen>
 
+    <!-- Track item -->
+    <dimen name="track_cover_size">80dp</dimen>
+    <dimen name="track_item_padding">15dp</dimen>
+    <dimen name="track_item_margin">5dp</dimen>
+    <dimen name="track_item_margin_left">10dp</dimen>
+    <dimen name="track_title_text_size">18sp</dimen>
+
 </resources>
