feat: display track lyrics

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
 
     <!-- Track Activity -->
     <dimen name="track_activity_padding">15dp</dimen>
+    <dimen name="track_activity_margin">15dp</dimen>
     <dimen name="track_details_title_text_size">24sp</dimen>
     <dimen name="track_details_artist_text_size">17sp</dimen>
 
