feat: display list of favorite tracks

--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".FavoritesActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_favorite_tracks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </android.support.constraint.ConstraintLayout>
