--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -42,5 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete_black_24dp"
-        android:layout_weight="0.1"/>
+        android:layout_weight="0.1"
+        android:contentDescription="@string/btn_remove_track_from_favorites"/>
 </LinearLayout>
