--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,8 @@
     <dimen name="track_details_title_text_size">24sp</dimen>
     <dimen name="track_details_artist_text_size">17sp</dimen>
 
+    <!-- Charts Activity -->
+    <dimen name="charts_activity_info_text_size">30sp</dimen>
+    <dimen name="charts_info_margin">10dp</dimen>
+
 </resources>
