feat: add country picker to charts

--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_charts_info"
             android:layout_width="wrap_content"
@@ -21,11 +22,20 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/btn_select_country"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/charts_info_margin"
+            android:contentDescription="@string/btn_select_country"
+            android:text="@string/btn_select_country"
+            app:layout_constraintTop_toBottomOf="@id/tv_charts_info" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_top_tracks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_charts_info" />
+            app:layout_constraintTop_toBottomOf="@id/btn_select_country" />
     </LinearLayout>
 
 
