--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -21,6 +21,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/track_details_title_text_size"
                 android:textStyle="bold"
+                android:singleLine="false"
+                app:layout_constrainedHeight="true"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,8 +50,7 @@
                 android:drawableStart="@drawable/ic_favorite_black_24dp"
                 android:text="@string/btn_favorites"
                 android:textSize="@dimen/btn_text_size"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_album" />
 
             <TextView
                 android:id="@+id/tv_lyrics"
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/track_activity_margin"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_album" />
+                app:layout_constraintTop_toBottomOf="@id/btn_add_to_favorites" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
