--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -11,8 +11,7 @@
         android:id="@+id/iv_cover"
         android:layout_width="@dimen/track_cover_size"
         android:layout_height="@dimen/track_cover_size"
-        android:contentDescription="@string/track_cover_image"
-        android:layout_weight="0.2"/>
+        android:contentDescription="@string/track_cover_image" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +41,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete_black_24dp"
-        android:layout_weight="0.1"
         android:contentDescription="@string/btn_remove_track_from_favorites"/>
 </LinearLayout>
