--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,8 @@
     <dimen name="charts_activity_info_text_size">30sp</dimen>
     <dimen name="charts_info_margin">10dp</dimen>
 
+    <!-- Widget -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_track_title_text_size">16sp</dimen>
+
 </resources>
