--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -60,6 +60,17 @@
         android:layout_marginEnd="@dimen/track_details_button_margin"
         android:contentDescription="@string/btn_favorites"
         android:src="@drawable/ic_favorite_black_24dp"
+        app:layout_constraintBottom_toTopOf="@id/fab_share"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/track_details_button_margin"
+        android:layout_marginEnd="@dimen/track_details_button_margin"
+        android:contentDescription="@string/btn_favorites"
+        android:src="@drawable/ic_share_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
